# semantic-envelope-extraction

./: .gitignore  README.md  extract.py  pyproject.toml  requirements.txt
.superpowers/brainstorm/402-1776892124/content/: approaches.html  architecture-v2.html  architecture-v3.html  modules.html  sam3-architecture.html  state-and-schema.html  waiting.html
.superpowers/brainstorm/402-1776892124/state/: server-stopped
docs/: wms-verification.md
docs/superpowers/plans/: 2026-04-24-text-to-polygon-implementation.md
docs/superpowers/specs/: 2026-04-22-text-to-polygon-design.md
ki_geodaten/jobs/: store.py
src/semantic_envelope/: __init__.py  depth_fusion.py  geometry.py  ingestion.py  mask_quality.py  merging.py  output.py  plane_fitting.py  projection.py  segmentation.py  types.py
tests/: test_depth_fusion.py  test_geometry.py  test_ingestion.py  test_mask_quality.py  test_merging.py  test_output.py  test_plane_fitting.py  test_projection.py  test_smoke.py  test_types.py
tests/jobs/: test_store.py
